fix WP and plugin tickmarks and timeline elements not showing in Browse Revisions when jQuery UI widget content background is set

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,12 @@
 	}
 }
 
+/* Browse revisions */
+
+.revisions-tickmarks * {
+	z-index: 1;
+}
+
 /* Utilities */
 
 .fd-util-wait,
